Fix Android super-test build.